<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >
    
    <TextView
    	android:id="@+id/TextView1"
   		android:layout_width="wrap_content"
   		android:layout_height="wrap_content"
   		android:layout_marginLeft="25dp"
   		android:layout_marginRight="25dp"
   		android:layout_marginTop="15dp"
   		android:textSize="22sp"
   		android:textColor="#0db7ff"
   		android:text="@string/faaliyet_header"/>
    
    
	<!-- Clickable title -->
	<TextView   
	    android:id="@+id/help_title_gest"
        android:text="@string/faaliyetpage_title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:textSize="30sp"
        android:onClick="toggle_contents"/>

	<!--content to hide/show -->
	<TextView   
	    android:id="@+id/txt_help_gest"
        android:text="@string/faaliyetpage_title2"
        android:layout_width="wrap_content"
        android:textSize="30sp"
        android:layout_height="wrap_content"/>

	
</LinearLayout>
