<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/faaliyetler"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_gravity="bottom"
        android:layout_height="wrap_content"
        android:layout_marginBottom="160dp"
        android:text="@string/faaliyetler" 
        android:onClick="OpenFaaliyetler"/>

    <Button
        android:id="@+id/fotoalbum"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_gravity="bottom"
        android:layout_height="wrap_content"
        android:layout_marginBottom="115dp"
        android:text="@string/fotoalbum"
        android:onClick="OpenFotoalbum"/>

    <Button
        android:id="@+id/Ayarlar"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_gravity="bottom"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:text="@string/instellingen"
        android:onClick="OpenAyarlar" />

    <ImageView
        android:id="@+id/facebook_logo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="-80dp"
        android:contentDescription="@string/facebook_logo"
        android:src="@drawable/facebook_logo" />

    <ImageView
        android:id="@+id/youtube_logo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="80dp"
        android:contentDescription="@string/youtube_logo"
        android:src="@drawable/youtube_logo" />

   	<ScrollView 
   	    android:id="@+id/scrollview"
   	    android:layout_width="match_parent"
    	android:layout_height="290dp">
   		<LinearLayout 
   		    android:layout_width="wrap_content"
   		    android:layout_height="wrap_content">
    		<TextView
        		android:id="@+id/textView1"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:layout_marginLeft="25dp"
        		android:layout_marginRight="25dp"
        		android:layout_marginTop="15dp"
        		android:textSize="22sp"
        		android:textColor="#0db7ff"
        		android:text="empty value"/>
   		</LinearLayout>
   	</ScrollView>
   	<View 
   	    android:layout_below="@+id/scrollview"
   	    android:layout_width="fill_parent"
   	    android:layout_height="1dp"
   	    android:background="@android:color/darker_gray"
   	    android:layout_gravity="bottom"
        android:layout_marginBottom="276dp"
   	    />

</FrameLayout>